# cmake_demo

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  License.txt  Makefile  cmake_demo-1.0.1-Linux.sh  cmake_install.cmake  config.h.in  demo.cc  install_manifest.txt
Testing/Temporary/: CTestCostData.txt
_CPack_Packages/Linux/STGZ/cmake_demo-1.0.1-Linux/include/: config.h
_CPack_Packages/Linux/TZ/: cmake_demo-1.0.1-Linux.tar.Z
_CPack_Packages/Linux/TZ/cmake_demo-1.0.1-Linux/include/: disp.h
utils/: CMakeLists.txt  Makefile  cmake_install.cmake  disp.cc
